@@ -1,110 +1,241 @@
 package solitaire;
 
-import javax.sound.sampled.*;
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.*;
-import java.io.File;
-import java.io.IOException;
+import java.awt.image.BufferedImage;
+import java.io.*;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Stack;
 
-public abstract class PileSolitaire extends JLayeredPane{
+public abstract class PileSolitaire extends JLayeredPane implements Solitaire{
 	private static final long serialVersionUID = 1L;
-	protected int COLS;
+    final static int GRAVITY = 1;
+    protected int COLS;
 	protected int difficulty;
-    static AudioInputStream winAudio;
-    static Clip clip;
-
-    static {
-        try {
-            winAudio = AudioSystem.getAudioInputStream(new File("winnersound.wav"));
-        } catch (UnsupportedAudioFileException e) {
-            throw new RuntimeException(e);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        try {
-            clip = AudioSystem.getClip();
-        } catch (LineUnavailableException e) {
-            throw new RuntimeException(e);
-        }
-    }
 
     Deck stock;
 	ArrayList<Pile> piles;
 	Stack<PileMove> pastMoves;
+
 	JPanel pilePanes,utilPane, mainPane, parPane, toolbar;
-	
-	Card selectedCard;
+    Timer time;
+    Instant start;
+    Menu mainMenu;
+    JLabel timeLabel;
+
+    Card selectedCard;
 	Pile heldPile;
 	Point clickOffset;
+    boolean gameEnded;
 
-	public PileSolitaire(int Columns, int Difficulty){
-		super();
-        setBackground(Utils.bgkColor);
-		COLS = Columns;
-		difficulty = Difficulty;
-		pastMoves = new Stack<PileMove>();
+    public PileSolitaire start(Menu menu) {
+        mainMenu = menu;
+        requestFocusInWindow();
+        return this;
+    }
+
+    public PileSolitaire(int Columns, int Difficulty){
+        super();
+        COLS = Columns;
+        difficulty = Difficulty;
+        setupUI();
+        pastMoves = new Stack<>();
+        makeDeck();
+        stock.shuffle();
+        setupPiles();
+        placeCards();
+        addUIFunctions();
+//		for(int j=0;j<COLS;++j) System.err.println(piles.get(j));
+    }
+    /** Constructor that makes the initial object from a save instead of random */
+    public PileSolitaire(int Columns, String saveFile){
+        super();
+        PileSave saveData;
+        try (ObjectInputStream in = new ObjectInputStream(new FileInputStream(saveFile))) {
+            saveData = ((PileSave) in.readObject());
+        } catch (IOException | ClassNotFoundException e) {
+            throw new RuntimeException(e);
+        }
+        COLS = Columns;
+        difficulty = saveData.difficulty;
+
+        setupUI();
+
+        // stock
+        pastMoves = new Stack<>();
+        stock = new Deck(0);
+        for (PileSave.CardState cs : saveData.stock) {
+            stock.add(new Card(cs.rank, cs.suit));
+        }
+
+        // piles
+        piles = new ArrayList<Pile>();
+        for (ArrayList<PileSave.CardState> pileList : saveData.piles) {
+            Pile p = new Pile(COLS);
+            for (PileSave.CardState cs : pileList) {
+                p.add(new Card(cs.rank, cs.suit), cs.faceDown);
+            }
+            piles.add(p);
+            pilePanes.add(p.pilePane);
+        }
+
+        addUIFunctions();
+        start = Instant.now().minusSeconds(saveData.timePast);
+//		for(int j=0;j<COLS;++j) System.err.println(piles.get(j));
+    }
+
+    public void setupUI(){
         parPane = new JPanel(new BorderLayout());
-        parPane.setOpaque(false);
+        parPane.setBackground(Utils.bgkColor);
         add(parPane,JLayeredPane.DEFAULT_LAYER);
         mainPane = new JPanel(new BorderLayout());
-        mainPane.setBackground(Utils.bgkColor);
+        mainPane.setOpaque(false);
         parPane.add(mainPane,BorderLayout.CENTER);
+
+        pilePanes = new JPanel(new GridLayout(1,COLS, 10, 0));
+        pilePanes.setOpaque(false);
+        mainPane.add(pilePanes, BorderLayout.CENTER);
+
         toolbar = new JPanel(new GridLayout(1,0)){
             @Override
             public Dimension getPreferredSize() {
                 return new Dimension(getParent().getWidth(), 100);
             }
         };
-        toolbar.add(new JButton("Undo"){
+        toolbar.setOpaque(false);
+        // Home button
+        JPanel tool1 = new JPanel();
+        tool1.setOpaque(false);
+        toolbar.add(tool1);
+        tool1.add(new RoundedButton(){
             @Override
             protected void init(String text, Icon icon) {
                 super.init(text, icon);
-                setOpaque(false);
+                addActionListener(e->switchToMainMenu());
+            }
+            @Override
+            public Dimension getPreferredSize() {
+                int a = Math.min(getParent().getWidth(), getParent().getHeight());
+                return new Dimension(a, a);
+            }
+            @Override
+            public void paint(Graphics g) {
+                super.paint(g);
+                g.drawImage(Utils.homeIcon, 0, 0, getWidth(), getHeight(), null);
+            }
+        });
+        // New game button
+        JPanel tool2 = new JPanel();
+        tool2.setOpaque(false);
+        toolbar.add(tool2);
+        tool2.add(new RoundedButton("New Game"){
+            @Override
+            protected void init(String text, Icon icon) {
+                super.init(text, icon);
+                addActionListener(e->{
+                    if (JOptionPane.showOptionDialog( PileSolitaire.this,
+                            "Previous save available, are you sure you want to override?",  "Load Options", JOptionPane.YES_NO_CANCEL_OPTION, JOptionPane.QUESTION_MESSAGE, null, new String[]{"Yes", "No"}, "No" ) == 0)
+                        newGame();
+                });
+            }
+            @Override
+            public Dimension getPreferredSize() {
+                int a = Math.min(getParent().getWidth(), getParent().getHeight());
+                return new Dimension(a, a);
+            }
+            @Override
+            public void paint(Graphics g) {
+                super.paint(g);
+//                g.drawImage(Utils.homeIcon, 0, 0, getWidth(), getHeight(), null);
+            }
+        });
+        // Undo button
+        JPanel tool3 = new JPanel();
+        tool3.setOpaque(false);
+        toolbar.add(tool3);
+        tool3.add(new RoundedButton(){
+            @Override
+            protected void init(String text, Icon icon) {
+                super.init(text, icon);
                 addActionListener(e->undoLastMove());
+            }
+
+            @Override
+            public Dimension getPreferredSize() {
+                int a = Math.min(getParent().getWidth(), getParent().getHeight());
+                return new Dimension(a, a);
+            }
+
+            @Override
+            public void paint(Graphics g) {
+                super.paint(g);
+                g.drawImage(Utils.undoIcon, 0, 0, getWidth(), getHeight(), null);
             }
         });
         parPane.add(toolbar, BorderLayout.SOUTH);
-		makeDeck();
-		stock.shuffle();
-		piles = new ArrayList<Pile>();
-		pilePanes = new JPanel(new GridLayout(1,COLS));
-        pilePanes.setOpaque(false);
-		mainPane.add(pilePanes, BorderLayout.CENTER);
-		mainPane.addMouseListener(new MouseAdapter(){
-			@Override
-			public void mouseReleased(MouseEvent e) {
-				// System.out.println("LISTENING TO MAIN");
-				if(selectedCard!=null) ((Pile)selectedCard.parent).pilePane.unhighlightAllCards();
-				heldPile = null;
-				selectedCard = null;
-				revalidate();
-				repaint();
-			}
-		});	
-		for(int i=0;i<COLS;++i) {
-			piles.add(new Pile(COLS));
-			pilePanes.add(piles.get(i).pilePane);
-		}
-		placeCards();
-		for (Pile pile:piles) {
-			addMouseListeners(pile);
-			for(Card c:pile) {
-				addMouseListeners(c);
-			}
-		}
-		setupKeyBindings();
-//		for(int j=0;j<COLS;++j) System.err.println(piles.get(j));
-	}
+        timeLabel = new JLabel("0:00",SwingConstants.RIGHT);
+        timeLabel.setFont(Utils.otherFont);
+        timeLabel.setForeground(Utils.fontColor);
+        timeLabel.setOpaque(false);
+        parPane.add(timeLabel, BorderLayout.NORTH);
+    }
+    /** sets up the piles arrays and base ui */
+    public void setupPiles(){
+        piles = new ArrayList<Pile>();
+        for(int i=0;i<COLS;++i) {
+            piles.add(new Pile(COLS));
+            pilePanes.add(piles.get(i).pilePane);
+        }
+    }
 
+    /** adds mouse functions, keybinds, timer */
+    public void addUIFunctions(){
+        mainPane.addMouseListener(new MouseAdapter(){
+            @Override
+            public void mouseReleased(MouseEvent e) {
+                // System.out.println("LISTENING TO MAIN");
+                if(selectedCard!=null) ((Pile)selectedCard.parent).pilePane.unhighlightAllCards();
+                heldPile = null;
+                selectedCard = null;
+                revalidate();
+                repaint();
+            }
+        });
+        addMouseListeners(piles);
+        setupKeyBindings();
+        start = Instant.now();
+        time = new Timer(1, new ActionListener() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                long theTime = Duration.between(start, Instant.now()).getSeconds();
+                timeLabel.setText(String.format("%02d",theTime/60)+":"+String.format("%02d",theTime%60));
+            }
+        });
+        time.start();
+    }
+
+    public void addMouseListeners(ArrayList<Pile> piles){
+        for (Pile pile:piles) {
+            addMouseListeners(pile);
+            for(Card c:pile) {
+                addMouseListeners(c);
+            }
+        }
+    }
     /** Where you should initiate stock */
 	protected abstract void makeDeck();
     /** Where you should place cards into the piles */
 	protected abstract void placeCards();
+    private void switchToMainMenu(){
+        saveGame();
+        ((CardLayout) mainMenu.cardLayoutPanel.getLayout()).show(mainMenu.cardLayoutPanel, "Menu");
+        mainMenu.requestFocusInWindow();
+    }
 
-	protected void addMouseListeners(Pile pile) {
+    protected void addMouseListeners(Pile pile) {
 		pile.pilePane.addMouseListener(new MouseAdapter() {
 			@Override
 			public void mouseReleased(MouseEvent e) {
@@ -169,7 +300,7 @@ public abstract class PileSolitaire extends JLayeredPane{
 				else {
 					// select the part that is movable
 					((Pile)c.parent).pilePane.highlightCards(topOfPile);
-					selectedCard = topOfPile.get(0);
+					selectedCard = topOfPile.getFirst();
 				}
 			}
 			@Override
@@ -188,7 +319,10 @@ public abstract class PileSolitaire extends JLayeredPane{
 				// since there is a move done, we remove anything from drag
 				remove(heldPile.pilePane);
 				// Get the pile that we will place on
-				Pile hoveringOver=getHoveringOver(SwingUtilities.convertPoint(((Pile)c.parent).cardsMap.get(c), e.getPoint(), PileSolitaire.this));
+                // e.point - offset + getwidth/2
+                Point cardMid = e.getPoint();
+                if(clickOffset!=null) cardMid= new Point(e.getPoint().x - clickOffset.x + ((Pile)c.parent).cardsMap.get(c).getWidth()/2, e.getPoint().y - clickOffset.y + ((Pile)c.parent).cardsMap.get(c).getHeight()/2);
+				Pile hoveringOver=getHoveringOver(SwingUtilities.convertPoint(((Pile)c.parent).cardsMap.get(c), cardMid, PileSolitaire.this));
 				// System.out.println("Released at pile pile "+piles.indexOf(hoveringOver));
 				// If Out of bounds || same pile || invalid move, just move them back
 				if(isValidMove(heldPile, parentPile, hoveringOver)){
@@ -227,7 +361,7 @@ public abstract class PileSolitaire extends JLayeredPane{
 						add(heldPile.pilePane,JLayeredPane.DRAG_LAYER);
 						
 						clickOffset = e.getPoint();
-						heldPile.pilePane.setSize(heldPile.pilePane.getPreferredSize());
+						heldPile.pilePane.setSize(((Pile)c.parent).pilePane.getPreferredSize());
 						heldPile.pilePane.doLayout();
 						((Pile)c.parent).pilePane.setVisible(topOfPile,false);
 
@@ -275,33 +409,35 @@ public abstract class PileSolitaire extends JLayeredPane{
 			}
 			else {
                 if (move.fromFlipped != null) {
-                    move.movedFrom.cardsMap.get(move.fromFlipped).isFaceDown = true;
-                    move.movedFrom.cardsMap.get(move.fromFlipped).setIcon();
+                    if(move.movedFrom.cardsMap.get(move.fromFlipped)!=null) move.movedFrom.cardsMap.get(move.fromFlipped).setFaceDown(true);
+                    else move.movedFrom.cardsMap.get(move.movedFrom.getLast()).setFaceDown(true);
                 }
                 if (move.clearedStack != null) {
-                    for (Card c : move.clearedStack) {
-                        move.movedTo.add(c);
-                    }
-                    JPanel labelContainer = null;
-                    for(Component c:utilPane.getComponents()) {
-                        if(c instanceof JPanel && ((JPanel) c).getComponents().length != 0) {
-                            labelContainer = (JPanel) c;
-                        }
-                    }
-                    labelContainer.remove(0);
+                    undoClearStack(move);
                 }
                 if (move.toFlipped != null) {
-                    move.movedTo.cardsMap.get(move.toFlipped).isFaceDown = true;
-                    move.movedTo.cardsMap.get(move.toFlipped).setIcon();
+                    if(move.movedTo.cardsMap.get(move.toFlipped)!=null) move.movedTo.cardsMap.get(move.toFlipped).setFaceDown(true);
+                    else move.movedTo.cardsMap.get(move.movedTo.getLast()).setFaceDown(true);
+                }
+                move.movedFrom.addAll(move.cardsMoved);
+                for(Component jc:move.movedFrom.pilePane.getComponents()){
+//                    System.out.println(jc.getMouseListeners().length);
+                    if(jc.getMouseListeners().length < 2 && jc instanceof JCard) addMouseListeners(((JCard)jc).card);
                 }
                 move.movedTo.removeAll(move.cardsMoved);
-                move.movedFrom.addAll(move.cardsMoved);
             }
 			pastMoves.pop();
 			revalidate();
 			repaint();
 		}
 	}
+
+    protected void undoClearStack(PileMove move) {
+        for (Card c : move.clearedStack) {
+            move.movedTo.add(c);
+        }
+    }
+
     /** undo a move drawing from the stock */
 	protected abstract void undoDrawMove();
     /** Returns the cards you can pick up from top of that pile */
@@ -319,12 +455,97 @@ public abstract class PileSolitaire extends JLayeredPane{
 
     protected void endGame(){
         // System.out.println("YOU WINNNNNNN!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
-        try {
-            if(!clip.isOpen()) clip.open(winAudio);
-        } catch (LineUnavailableException | IOException e) {
-            throw new RuntimeException(e);
-        }
-        clip.start();
+        if(Utils.winAudio.isOpen()) Utils.winAudio.setFramePosition(0);
+        time.stop();
+        Utils.winAudio.start();
+        gameEnded = true;
+    }
+    protected void startEndAnimation(ArrayList<Pile> fullCardPiles) {
+        ArrayList<BufferedImage> images = new ArrayList<>();
+        ArrayList<Point> points = new ArrayList<>();
+        ArrayList<Integer> velocitiesX = new ArrayList<>();
+        ArrayList<Integer> velocitiesY = new ArrayList<>();
+        ArrayList<Integer> initialX = new ArrayList<>();
+        ArrayList<Integer> initialY = new ArrayList<>();
+        int cardWidth = mainPane.getWidth()/COLS;
+        int cardHeight = (int) (cardWidth*JCard.getRatio());
+        boolean follow = (int) (Math.random()*2)==1;
+        Timer adder = new Timer(follow? 100: 250, null);
+        adder.addActionListener(e->{
+            boolean allEmpty = true;
+            for(Pile pile: fullCardPiles){
+                if(pile.isEmpty()) continue;
+                allEmpty = false;
+                JCard jc = pile.cardsMap.get(pile.getLast());
+                BufferedImage bufImg = new BufferedImage(cardWidth, cardHeight, BufferedImage.TYPE_INT_ARGB);
+                Graphics2D g2d = bufImg.createGraphics();
+                g2d.drawImage(jc.getMasterIcon(), 0, 0, cardWidth, cardHeight, null);
+                g2d.dispose();
+                images.add(bufImg);
+                points.add(SwingUtilities.convertPoint(pile.pilePane, jc.getLocation(), this));
+                if(follow && points.size() > fullCardPiles.size()){
+                    int i = pilesIndexOf(fullCardPiles,pile);
+                    velocitiesX.add(initialX.get(i));
+                    velocitiesY.add(initialY.get(i));
+                }
+                else{
+                    int x = (int) (Math.random()*20 -10);
+                    int y = (int) (Math.random()*20 -10);
+                    velocitiesX.add(x);
+                    velocitiesY.add(y);
+                    initialX.add(x);
+                    initialY.add(y);
+                }
+                pile.remove(pile.getLast());
+            }
+            if(allEmpty) adder.stop();
+        });
+        adder.start();
+        JPanel blank = new JPanel(){
+            @Override
+            public void paint(Graphics g) {
+                super.paint(g);
+                for(int i = images.size()-1;i>=0;--i){
+                    g.drawImage(images.get(i), points.get(i).x, points.get(i).y, null);
+                }
+            }
+        };
+        blank.setBounds(0,0,getWidth(),getHeight());
+        blank.setOpaque(false);
+        blank.setLayout(null);
+        addComponentListener(new ComponentAdapter(){
+            @Override
+            public void componentResized(ComponentEvent e){
+                blank.setBounds(0,0,getWidth(),getHeight());
+            }
+        });
+        int ending = (int) (Math.random()*2);
+        add(blank, JLayeredPane.MODAL_LAYER);
+        Timer animation = new Timer(20, null);
+        animation.addActionListener(e->{
+            if(!gameEnded) {
+                animation.stop();
+                remove(blank);
+                repaint();
+                return;
+            }
+            switch(ending){
+                case 0: DVDLogo(images, points, velocitiesX, velocitiesY); break;
+                case 1: gravityCards(images, points, velocitiesX, velocitiesY, initialX, initialY, follow); break;
+            }
+            blank.repaint();
+        });
+        animation.start();
+    }
+    protected void newGame(){
+        gameEnded = false;
+        clearTable();
+        makeDeck();
+        stock.shuffle();
+        placeCards();
+        addUIFunctions();
+        revalidate();
+        repaint();
     }
 	/** move them over, check for any changes in the pile */
 	private void makeMove(Pile held, Pile from, Pile to) {
@@ -338,32 +559,156 @@ public abstract class PileSolitaire extends JLayeredPane{
 	}
 	/** Checking if the pile has a flipped card on top, then flipping it if there is */
 	protected void checkPileTop(Pile pile) {
-		if(!pile.isEmpty() && pile.cardsMap.get(pile.getLast()).isFaceDown) {
+		if(!pile.isEmpty() && pile.cardsMap.get(pile.getLast()).isFaceDown()) {
 			// System.out.println("REVEALING CARD "+ pile.cardsMap.get(pile.getLast()));
-			pile.cardsMap.get(pile.getLast()).isFaceDown = false;
-			pile.cardsMap.get(pile.getLast()).setIcon();
+			pile.cardsMap.get(pile.getLast()).setFaceDown(false);
             if(pile == pastMoves.getLast().movedFrom)
                 pastMoves.getLast().fromFlipped = pile.getLast();
             if(pile == pastMoves.getLast().movedTo)
                 pastMoves.getLast().toFlipped = pile.getLast();
 		}
 	}
+
+    void saveGame() {
+        if(!gameEnded) {
+            saveToFile(new File("GameSave_" + getClass().getSimpleName() + ".dat"));
+        }
+    }
+
+    /** Load game from a PileSolitaire already set up */
+    protected void loadSave(PileSave save) {
+        clearTable();
+        // Stock
+        for (PileSave.CardState cs : save.stock) {
+            stock.add(new Card(cs.rank, cs.suit));
+        }
+
+        // Piles
+        for (int i=0; i<piles.size(); ++i) {
+            Pile p = piles.get(i);
+            ArrayList<PileSave.CardState> pileList = save.piles.get(i);
+            for (PileSave.CardState cs : pileList) {
+                p.add(new Card(cs.rank, cs.suit), cs.faceDown);
+            }
+        }
+
+        // Past moves
+        for (PileSave.PileMoveState pm : save.pastMoves) {
+            pastMoves.push(new PileMove(pm, piles));
+        }
+        addMouseListeners(piles);
+        start = Instant.now().minusSeconds(save.timePast);
+        revalidate();
+        repaint();
+    }
+
+    public void saveToFile(File file) {
+        System.out.println("SAVING GAME "+getClass());
+        PileSave state = new PileSave(difficulty, Duration.between(start, Instant.now()).getSeconds(), stock, piles, pastMoves);
+        try (ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(file))) {
+            out.writeObject(state);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    public void loadFromFile(File file) {
+        gameEnded = false;
+        try (ObjectInputStream in = new ObjectInputStream(new FileInputStream(file))) {
+            loadSave((PileSave) in.readObject());
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        } catch (ClassNotFoundException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    void clearTable() {
+        for(Pile pile : piles)
+            pile.clear();
+        stock.clear();
+        pastMoves.clear();
+    }
+
     /** ArrayList.indexOf, but by reference only */
-	protected <T> int pilesIndexOf(ArrayList<T> piles, T p) {
-		for (int i=0;i<piles.size();++i) if (piles.get(i) == p) return i;
-		return -1;
-	}
+    public static <T> int pilesIndexOf(ArrayList<T> piles, T p) {
+        for (int i=0;i<piles.size();++i) if (piles.get(i) == p) return i;
+        return -1;
+    }
     /** ArrayList.contains, but by reference only */
-    protected <T> boolean pilesContains(ArrayList<T> piles, T p)
+    public static <T> boolean pilesContains(ArrayList<T> piles, T p)
     {
-        for (int i=0;i<piles.size();++i) if (piles.get(i) == p) return true;
+        for (T pile : piles) if (pile == p) return true;
         return false;
     }
-	
-	@Override
+
+    void DVDLogo(ArrayList<BufferedImage> images, ArrayList<Point> points, ArrayList<Integer> velocitiesX, ArrayList<Integer> velocitiesY){
+        for(int i = 0;i<images.size();++i){
+            int newX = points.get(i).x+velocitiesX.get(i);
+            int newY = points.get(i).y+velocitiesY.get(i);
+            if(newX<=0 || newX+images.get(i).getWidth()>=getWidth()){
+                if (newX<=0)
+                    newX = -newX;
+                else newX = 2 * getWidth() - newX - 2*images.get(i).getWidth();
+                velocitiesX.set(i,-velocitiesX.get(i));
+            }
+            if(newY<=0 || newY+images.get(i).getHeight()>=getHeight()){
+                if (newY<=0)
+                    newY = -newY;
+                else newY = 2* getHeight() - newY - 2*images.get(i).getHeight();
+                velocitiesY.set(i,-velocitiesY.get(i));
+            }
+            points.set(i, new Point(newX, newY));
+        }
+    }
+    void gravityCards(ArrayList<BufferedImage> images, ArrayList<Point> points, ArrayList<Integer> velocitiesX, ArrayList<Integer> velocitiesY, ArrayList<Integer> initialX, ArrayList<Integer> initialY, boolean follow){
+        for (int i = 0; i < images.size(); i++) {
+            int newX = points.get(i).x + velocitiesX.get(i);
+            if(newX<=0 || newX+images.get(i).getWidth()>=getWidth()){
+                if (newX<=0)
+                    newX = -newX;
+                else newX = 2 * getWidth() - newX - 2*images.get(i).getWidth();
+                velocitiesX.set(i,-velocitiesX.get(i));
+            }
+            int vy = velocitiesY.get(i) + GRAVITY;
+            int newY = points.get(i).y + vy;
+            if(newY>=getHeight()){
+                newY = -images.get(i).getHeight();
+                if (follow) {
+                    if (i < initialX.size()) {
+                        int ivx = (int) (Math.random() * 20 - 10);
+                        int ivy = (int) (Math.random() * 20 - 10);
+                        velocitiesX.set(i, ivx);
+                        velocitiesY.set(i, ivy);
+                        initialX.set(i, ivx);
+                        initialY.set(i, ivy);
+                    } else {
+                        int index = i % initialX.size();
+                        velocitiesX.set(i, initialX.get(index));
+                        velocitiesY.set(i, initialY.get(index));
+                    }
+                }
+                else {
+                    velocitiesX.set(i, (int) (Math.random() * 20 - 10));
+                    velocitiesY.set(i, (int) (Math.random() * 20 - 10));
+                }
+            }
+            else if(newY+images.get(i).getHeight()>=getHeight()){
+                vy = -(int) (vy * 0.7);
+                if(velocitiesX.get(i)==0 && velocitiesY.get(i)==0) newY += newY+images.get(i).getHeight()-getHeight();
+                else newY = 2 * getHeight() - newY - 2 * images.get(i).getHeight();
+            }
+            velocitiesY.set(i,vy);
+            if(newY == getHeight()-images.get(i).getHeight())  velocitiesX.set(i, (int) (velocitiesX.get(i)*0.7));
+            points.set(i, new Point(newX, newY));
+        }
+    }
+
+    @Override
 	public void doLayout() {
 		parPane.setBounds(0, 0, getWidth(), getHeight());
 	}
+
 
 }
 
@@ -385,5 +730,154 @@ class PileMove{
 	public PileMove(boolean draw) {
 		drawMove = draw;
 	}
+    public PileMove(PileSave.PileMoveState save, ArrayList<Pile> piles){
+        drawMove = save.drawMove;
+        if (drawMove)
+            return;
+        cardsMoved = new ArrayList<>();
+        for (PileSave.CardState cs : save.cardsMoved)
+            cardsMoved.add(new Card(cs.rank, cs.suit));
+
+        movedFrom = piles.get(save.movedFromIndex);
+        movedTo = piles.get(save.movedToIndex);
+
+        if (save.clearedStack != null) {
+            clearedStack = new ArrayList<>();
+            for (PileSave.CardState cs : save.clearedStack)
+                clearedStack.add(new Card(cs.rank, cs.suit));
+        }
+
+        if (save.fromFlipped != null)
+            fromFlipped = new Card(save.fromFlipped.rank, save.fromFlipped.suit);
+        if (save.toFlipped != null)
+            toFlipped = new Card(save.toFlipped.rank, save.toFlipped.suit);
+    }
+    public PileMove(PileSave.PileMoveState save, ArrayList<Pile> piles1, ArrayList<Pile> piles2){
+        drawMove = save.drawMove;
+        if (drawMove)
+            return;
+        cardsMoved = new ArrayList<>();
+        for (PileSave.CardState cs : save.cardsMoved)
+            cardsMoved.add(new Card(cs.rank, cs.suit));
+
+        if(save.movedFromIndex>-1) movedFrom = piles1.get(save.movedFromIndex);
+        else movedFrom = piles2.get(-save.movedFromIndex-1);
+        if(save.movedToIndex>-1) movedTo = piles1.get(save.movedToIndex);
+        else movedTo = piles2.get(-save.movedToIndex-1);
+
+        if (save.clearedStack != null) {
+            clearedStack = new ArrayList<>();
+            for (PileSave.CardState cs : save.clearedStack)
+                clearedStack.add(new Card(cs.rank, cs.suit));
+        }
+
+        if (save.fromFlipped != null)
+            fromFlipped = new Card(save.fromFlipped.rank, save.fromFlipped.suit);
+        if (save.toFlipped != null)
+            toFlipped = new Card(save.toFlipped.rank, save.toFlipped.suit);
+    }
 }
 
+/** A serilizable class to be written into a file, containing info of a PileSolitaire and extra utilPiles for specifics */
+class PileSave extends GameSave implements Serializable{
+    int difficulty;
+    long timePast;
+    public ArrayList<CardState> stock = new ArrayList<>();
+    public ArrayList<ArrayList<CardState>> piles = new ArrayList<>();
+    public ArrayList<ArrayList<CardState>> utilPiles;
+    public ArrayList<PileMoveState> pastMoves = new ArrayList<>();
+
+    public PileSave(int diff, long time, Deck stock, ArrayList<Pile> piles, Stack<PileMove> pastMoves) {
+        this(diff, time, stock, piles);
+        // Past moves
+        for (PileMove move : pastMoves) {
+            this.pastMoves.add(new PileMoveState(move,piles));
+        }
+    }
+    public PileSave(int diff, long time, Deck stock, ArrayList<Pile> piles) {
+        difficulty = diff;
+        timePast = time;
+        // Stock
+        for (Card c : stock) {
+            this.stock.add(new CardState(c.getRank(), c.getSuit(), true));
+        }
+
+        // Piles
+        for (Pile p : piles) {
+            ArrayList<CardState> pileList = new ArrayList<>();
+            for (Card c : p) {
+                pileList.add(new CardState(c.getRank(), c.getSuit(), c.isFaceDown()));
+            }
+            this.piles.add(pileList);
+        }
+    }
+
+    public static class CardState implements Serializable {
+        private static final long serialVersionUID = 1L;
+        public char rank;
+        public char suit;
+        public boolean faceDown;
+
+        public CardState(char rank, char suit, boolean faceDown) {
+            this.rank = rank;
+            this.suit = suit;
+            this.faceDown = faceDown;
+        }
+    }
+
+    public static class PileMoveState implements Serializable {
+        private static final long serialVersionUID = 1L;
+
+        public ArrayList<CardState> cardsMoved = new ArrayList<>();
+        public int movedFromIndex = -1;
+        public int movedToIndex = -1;
+        public ArrayList<CardState> clearedStack;
+        public CardState fromFlipped = null;
+        public CardState toFlipped = null;
+        public boolean drawMove;
+
+        public PileMoveState(PileMove move, ArrayList<Pile> piles) {
+            drawMove = move.drawMove;
+            if (drawMove) return;
+
+            movedFromIndex = PileSolitaire.pilesIndexOf(piles, move.movedFrom);
+            movedToIndex = PileSolitaire.pilesIndexOf(piles, move.movedTo);
+
+            for (Card c : move.cardsMoved)
+                cardsMoved.add(new CardState(c.getRank(), c.getSuit(), false));
+
+            if (move.clearedStack != null) {
+                clearedStack = new ArrayList<>();
+                for (Card c : move.clearedStack)
+                    clearedStack.add(new CardState(c.getRank(), c.getSuit(), false));
+            }
+            if (move.fromFlipped != null)
+                fromFlipped = new CardState(move.fromFlipped.getRank(), move.fromFlipped.getSuit(), false);
+            if (move.toFlipped != null)
+                toFlipped = new CardState(move.toFlipped.getRank(), move.toFlipped.getSuit(), false);
+        }
+        public PileMoveState(PileMove move, ArrayList<Pile> piles1, ArrayList<Pile> piles2) {
+            drawMove = move.drawMove;
+            if (drawMove) return;
+
+            movedFromIndex = PileSolitaire.pilesIndexOf(piles1, move.movedFrom);
+            movedToIndex = PileSolitaire.pilesIndexOf(piles1, move.movedTo);
+
+            if(movedFromIndex == -1) movedFromIndex = -PileSolitaire.pilesIndexOf(piles2, move.movedFrom) -1;
+            if(movedToIndex == -1) movedToIndex = -PileSolitaire.pilesIndexOf(piles2, move.movedTo) -1;
+
+            for (Card c : move.cardsMoved)
+                cardsMoved.add(new CardState(c.getRank(), c.getSuit(), false));
+
+            if (move.clearedStack != null) {
+                clearedStack = new ArrayList<>();
+                for (Card c : move.clearedStack)
+                    clearedStack.add(new CardState(c.getRank(), c.getSuit(), false));
+            }
+            if (move.fromFlipped != null)
+                fromFlipped = new CardState(move.fromFlipped.getRank(), move.fromFlipped.getSuit(), false);
+            if (move.toFlipped != null)
+                toFlipped = new CardState(move.toFlipped.getRank(), move.toFlipped.getSuit(), false);
+        }
+    }
+}
